ADD LOGGING and env dev config